--- a/scss/component/_nav.scss
+++ b/scss/component/_nav.scss
@@ -3,13 +3,16 @@
 // `<nav>`s or `<ul>`s.
 
 .nav {
+    display: flex;
+    flex-wrap: wrap;
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
 }
 
 .nav-link {
-    display: inline-block;
+    display: block;
+    padding: $nav-link-padding-y $nav-link-padding-x;
 
     // Disabled state lightens text and removes hover/focus effects
     // By default it also influences `.nav-tab` and `.nav-pills`
@@ -20,93 +23,18 @@
     }
 }
 
-@if $enable-flex-full {
-    .nav {
-        display: flex;
-        flex-wrap: wrap;
-
-        // Simulate space between links
-        .nav-link + .nav-link {
-            margin-left: $nav-item-margin;
-        }
-    }
-
-    // scss-lint:disable QualifyingElement
-    ul.nav:not(.nav-inline):not(.nav-tabs):not(.nav-pills):not(.navbar-nav) {
-        flex-direction: column;
-    }
-    // scss-lint:enable QualifyingElement
-}
-@if $enable-flex-opt {
-    .nav-flex {
-        display: flex;
-        flex-wrap: wrap;
-
-        // Simulate space between links
-        .nav-link + .nav-link {
-            margin-left: $nav-item-margin;
-        }
-    }
-
-    // scss-lint:disable QualifyingElement
-    ul.nav-flex:not(.nav-inline):not(.nav-tabs):not(.nav-pills):not(.navbar-nav) {
-        flex-direction: column;
-    }
-    // scss-lint:enable QualifyingElement
-}
-
-// Nav inline
-.nav-inline {
-    .nav-item {
-        @if not $enable-flex-full {
-            display: inline-block;
-        }
-    }
-
-    .nav-item + .nav-item,
-    .nav-link + .nav-link {
-        margin-left: $nav-item-inline-spacer;
-    }
-}
-@if $enable-flex-full {
-    .nav-inline {
-        flex-flow: row wrap;
-    }
-}
-@if $enable-flex-opt {
-    .nav-flex.nav-inline {
-        flex-flow: row wrap;
-    }
-}
-
 
 // Tabs
 .nav-tabs {
+    flex-flow: row wrap;
     border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;
 
-    @if $enable-flex-full {
-        flex-flow: row wrap;
-    } @else {
-        @include clearfix();
-    }
-
     .nav-item {
-        @if $enable-flex-full {
-           //flex: 1;
-        } @else {
-            float: left;
-        }
         // Make the list-items overlay the bottom border
         margin-bottom: -$nav-tabs-border-width;
-
-        + .nav-item {
-            margin-left: $nav-item-margin;
-        }
     }
 
     .nav-link {
-        display: block;
-        padding: $nav-link-padding;
         text-decoration: none;
         border: $nav-tabs-border-width solid transparent;
         @include border-radius($border-radius $border-radius 0 0);
@@ -138,35 +66,13 @@
         @include border-top-radius(0);
     }
 }
-@if $enable-flex-opt {
-    .nav-flex.nav-tabs {
-        flex-flow: row wrap;
 
-        &::after {
-            content: none;
-        }
-    }
-}
 
 // Pills
 .nav-pills {
-    @if $enable-flex-full {
-        flex-flow: row wrap;
-    } @else {
-        @include clearfix();
-    }
-
-    .nav-item {
-        float: left;
-
-        + .nav-item {
-            margin-left: $nav-item-margin;
-        }
-    }
+    flex-flow: row wrap;
 
     .nav-link {
-        display: block;
-        padding: $nav-link-padding;
         text-decoration: none;
         @include border-radius($nav-pills-border-radius);
 
@@ -189,42 +95,26 @@
         background-color: $nav-pills-active-bg;
     }
 }
-@if $enable-flex-opt {
-    .nav-flex.nav-pills {
-        flex-flow: row wrap;
 
-        &::after {
-            content: none;
-        }
-    }
+
+// Vertical navigation
+.nav-vertical {
+    flex-direction: column;
 }
 
-.nav-stacked {
-    @if $enable-flex-full {
-        flex-direction: column;
-    }
-
+// Justified variants
+.nav-fill {
     .nav-item {
-        display: block;
-        float: none;
-
-        + .nav-item {
-            margin-top: $nav-item-margin;
-            margin-left: 0;
-        }
-    }
-
-    .nav-link {
-        display: block;
-
-        + .nav-link {
-            margin-top: $nav-item-margin;
-        }
+        flex: 1 1 auto;
+        text-align: center;
     }
 }
-@if $enable-flex-opt {
-    .nav-flex.nav-stacked {
-        flex-direction: column;
+
+.nav-justify {
+    .nav-item {
+        flex-basis: 0;
+        flex-grow: 1;
+        text-align: center;
     }
 }
 
@@ -233,12 +123,7 @@
 .tab-content {
     > .tab-pane {
         display: none;
-
-        &:focus {
-            outline: none;
-        }
     }
-
     > .active {
         display: block;
     }
