update docs and tests

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -49,19 +49,24 @@
             padding-top: .75rem;
             padding-bottom: .75rem;
             background-color: rgba(34,68,102,.15);
-            border: $gridline-border-width solid rgba(34,68,102,.2);
+            border: $border-width solid rgba(34,68,102,.2);
         }
+    }
+}
+.cf-example-row-grid {
+    .row {
+        background-color: rgba(34,68,102,.05);
     }
 }
 .cf-example-row-flex {
     .row {
-        border: $gridline-border-width solid rgba(34,68,102,.5);
+        border: $border-width solid rgba(34,68,102,.5);
     }
 }
 .cf-example-row-flex-v {
     .row {
         height: 7rem;
-        border: $gridline-border-width solid rgba(34,68,102,.5);
+        border: $border-width solid rgba(34,68,102,.5);
     }
 }
 
@@ -279,7 +284,7 @@
 // Flex utilities
 .cf-example-flex {
     > div div {
-        background-color: rgba(34,68,102,.15);
+        background-color: rgba(34,68,102,.05);
         border: $gridline-border-width solid rgba(34,68,102,.2);
     }
 }
