quick fix player examples

--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -17,7 +17,7 @@
     white-space: nowrap;
 }
 .player.ready {
-    display: block;
+    display: flex;
 }
 .player-control > .off {
     display: none;
