--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -10,6 +10,7 @@
     > .btn {
         position: relative;
         flex: 0 1 auto;
+        margin-bottom: 0;
 
         // Bring the "active" button to the front
         &:active,
