--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -865,6 +865,7 @@ $card-deck-gutter-widths: (
 $card-group-breakpoint:     sm !default;
 
 $card-columns-breakpoint:   sm !default;
+$card-columns-count:        3 !default;
 $card-columns-column-gap:   1.25rem !default;
 
 
