--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -109,6 +109,32 @@
     margin-top: .5rem;
 }
 
+// Card deck
+.card-deck-col {
+    flex-flow: row wrap;
+    align-items: stretch;
+    justify-content: flex-start;
+    margin-right: -1rem;
+    margin-bottom: 0;
+    margin-left: -1rem;
+}
+.card-deck-col .card {
+    flex-basis: 100%;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+}
+@media (min-width: 35em) {
+    .card-deck-col .card {
+        flex-basis: calc(50% - 2rem);
+    }
+}
+@media (min-width: 62em) {
+    .card-deck-col .card {
+        flex-basis: calc(25% - 2rem);
+    }
+}
+
 // List groups
 .cf-example > .list-group {
     max-width: 25rem;
