--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -817,6 +817,44 @@ h4 > code {
   margin-top: .5rem;
 }
 
+.card-deck-col {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-right: -1rem;
+  margin-bottom: 0;
+  margin-left: -1rem;
+}
+
+.card-deck-col .card {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+}
+
+@media (min-width: 35em) {
+  .card-deck-col .card {
+    -ms-flex-preferred-size: calc(50% - 2rem);
+        flex-basis: calc(50% - 2rem);
+  }
+}
+
+@media (min-width: 62em) {
+  .card-deck-col .card {
+    -ms-flex-preferred-size: calc(25% - 2rem);
+        flex-basis: calc(25% - 2rem);
+  }
+}
+
 .cf-example > .list-group {
   max-width: 25rem;
 }
