--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -8,8 +8,8 @@
 }
 
 // Fluid container
-// Utilizes the mixin meant for fixed width containers, but without any defined
-// width for fluid, full width layouts.
+// Utilizes the mixin meant for fixed width containers, but keeps
+// base 100% width for fluid, full width layouts.
 @if $enable-grid-classes {
     .container-fluid {
         @include make-container();
