--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -3,7 +3,8 @@
 
 // Containers
 @mixin make-container($gutters: $grid-gutter-widths) {
-    max-width: 100%;
+    width: 100%; // Prevent too narrow
+    max-width: 100%; // Prevent too wide
     margin-right: auto;
     margin-left: auto;
 
