--- a/scss/component/_progress.scss
+++ b/scss/component/_progress.scss
@@ -7,7 +7,7 @@
     display: flex;
     overflow: hidden; // Force rounded corners by cropping
     font-size: $progress-font-size;
-    line-height: 0;  // Allow bar to control min-height
+    line-height: $progress-height;
     background-color: $progress-bg;
     @include border-radius($progress-border-radius);
     @include box-shadow($progress-box-shadow);
