--- a/scss/component/_popover.scss
+++ b/scss/component/_popover.scss
@@ -97,6 +97,7 @@
     padding-right: ($popover-header-padding-x * 2);
     margin: 0; // reset heading margin
     font-size: $font-size-base;
+    color: $popover-header-color;
     background-color: $popover-header-bg;
     border-bottom: $popover-header-border-width solid $popover-header-border-color;
     @include border-radius($popover-border-radius $popover-border-radius 0 0);
@@ -108,6 +109,7 @@
 
 .popover-body {
     padding: $popover-body-padding-y $popover-body-padding-x;
+    color: $popover-content-color;
 }
 
 // Arrows
