--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -1,7 +1,6 @@
 .card {
     position: relative;
-    display: flex;
-    flex-direction: column;
+    display: block;
     margin-bottom: $card-spacer-y;
     background-color: $card-bg;
     border: $card-border-width solid $card-border-color;
@@ -9,7 +8,6 @@
 }
 
 .card-body {
-    flex: 1 1 auto;
     padding: $card-padding-y $card-padding-x;
 }
 
