--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -119,19 +119,20 @@
     margin-left: -1rem;
 }
 .card-deck-col .card {
-    flex-basis: 100%;
+    flex-basis: auto;
+    width: calc(100% - 2rem);
     margin-right: 1rem;
     margin-bottom: 1rem;
     margin-left: 1rem;
 }
 @media (min-width: 35em) {
     .card-deck-col .card {
-        flex-basis: calc(50% - 2rem);
+        width: calc(50% - 2rem);
     }
 }
 @media (min-width: 62em) {
     .card-deck-col .card {
-        flex-basis: calc(25% - 2rem);
+        width: calc(25% - 2rem);
     }
 }
 
