--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -1,7 +1,6 @@
 .card {
     position: relative;
-    display: flex;
-    flex-direction: column;
+    display: block;
     margin-bottom: $card-spacer-y;
     background-color: $card-bg;
     border: $card-border-width solid $card-border-color;
@@ -9,7 +8,6 @@
 }
 
 .card-body {
-    flex: 1 1 auto;
     padding: $card-padding-y $card-padding-x;
 }
 
@@ -127,10 +125,7 @@
     border-left: 0;
 }
 
-// Card image
-.card-img {
-    @include border-radius($card-border-radius-inner);
-}
+// Card image overlay
 .card-img-overlay {
     position: absolute;
     top: 0;
@@ -140,13 +135,17 @@
     padding: $card-img-overlay-padding;
 }
 
-// Card image caps
+// Card images
+.card-img {
+    @include border-radius($card-border-radius-inner);
+}
 .card-img-top {
     @include border-radius($card-border-radius-inner $card-border-radius-inner 0 0);
 }
 .card-img-bottom {
     @include border-radius(0 0 $card-border-radius-inner $card-border-radius-inner);
 }
+
 
 // Card deck
 // 1. Individual cards have margin-bottom by default.
