--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -834,8 +834,9 @@ h4 > code {
 }
 
 .card-deck-col .card {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+  width: calc(100% - 2rem);
   margin-right: 1rem;
   margin-bottom: 1rem;
   margin-left: 1rem;
@@ -843,15 +844,13 @@ h4 > code {
 
 @media (min-width: 35em) {
   .card-deck-col .card {
-    -ms-flex-preferred-size: calc(50% - 2rem);
-        flex-basis: calc(50% - 2rem);
+    width: calc(50% - 2rem);
   }
 }
 
 @media (min-width: 62em) {
   .card-deck-col .card {
-    -ms-flex-preferred-size: calc(25% - 2rem);
-        flex-basis: calc(25% - 2rem);
+    width: calc(25% - 2rem);
   }
 }
 
