--- a/scss/mixins/_images.scss
+++ b/scss/mixins/_images.scss
@@ -1,13 +1,6 @@
-// Image Mixins
-// - Responsive image
-// - Retina image
-
-
-// Responsive image
-//
+// Fluid image
 // Keep images from scaling beyond the width of their parents.
-
-@mixin img-responsive() {
+@mixin img-fluid() {
     // Set a maximum relative to the parent
     max-width: 100%;
     // Override the height to auto, otherwise images will be stretched
@@ -17,9 +10,7 @@
 
 
 // Retina image
-//
 // Short retina mixin for setting background-image and -size.
-
 @mixin img-retina($file-1x, $file-2x, $width-1x, $height-1x) {
     background-image: url($file-1x);
 
