--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -36,7 +36,7 @@
 @import "component/close";
 @import "component/drag";
 @import "component/progress";
-@import "component/embed-responsive";
+@import "component/embed";
 @import "component/list-group";
 @import "component/button-group";
 @import "component/input-group";
