--- a/scss/base/_print.scss
+++ b/scss/base/_print.scss
@@ -13,17 +13,29 @@
         *,
         *::before,
         *::after,
+        h1::first-letter,
+        h2::first-letter,
+        h3::first-letter,
+        h4::first-letter,
+        h5::first-letter,
+        h6::first-letter,
         p::first-letter,
         div::first-letter,
         blockquote::first-letter,
         li::first-letter,
+        h1::first-line,
+        h2::first-line,
+        h3::first-line,
+        h4::first-line,
+        h5::first-line,
+        h6::first-line,
         p::first-line,
         div::first-line,
         blockquote::first-line,
         li::first-line {
-            color: #000 !important; // Black prints faster: http://www.sanbeiji.com/archives/953
+            // color: #000 !important; // Black prints faster: http://www.sanbeiji.com/archives/953
             text-shadow: none !important;
-            background: transparent !important;
+            // background: transparent !important;
             box-shadow: none !important;
         }
 
@@ -32,14 +44,14 @@
             text-decoration: underline;
         }
 
-        a[href]::after {
-            content: " (" attr(href) ")";
-        }
+        // a[href]::after {
+        //     content: " (" attr(href) ")";
+        // }
 
-        a[href^="#"]::after,
-        a[href^="javascript:"]::after {
-            content: "";
-        }
+        // a[href^="#"]::after,
+        // a[href^="javascript:"]::after {
+        //     content: "";
+        // }
 
         abbr[title]::after {
             content: " (" attr(title) ")";
@@ -79,9 +91,6 @@
 
         // Figuration components start
 
-        .navbar {
-            display: none;
-        }
         .btn,
         .dropup > .btn {
             > .caret {
