hide main navbar in docs

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg navbar-dark cf-header">
+<header class="navbar navbar-expand-lg navbar-dark print-hide cf-header">
     <nav class="container">
         <a class="navbar-brand" href="{{ site.baseurl }}/">CAST Figuration</a>
         <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" aria-label="Toggle navigation">
