rename table-responsive => table-scroll

--- a/docs/assets/scss/_responsive-tests.scss
+++ b/docs/assets/scss/_responsive-tests.scss
@@ -2,8 +2,8 @@
 
 // Responsive tests
 
-// Responsive (scrollable) doc tables
-.table-responsive .highlight pre {
+// Doc tables
+.table .highlight pre {
     white-space: normal;
 }
 
