--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -419,6 +419,7 @@ $figure-caption-color:      $uibase-500 !default;
 
 // Tables
 // =====
+$table-margin-bottom:           $spacer !default;
 $table-cell-padding:            .75rem !default;
 $table-condensed-cell-padding:  .3125rem .5rem !default;
 
