--- a/scss/core/_tables.scss
+++ b/scss/core/_tables.scss
@@ -2,7 +2,8 @@
 .table {
     width: 100%;
     max-width: 100%;
-    margin-bottom: $spacer;
+    margin-bottom: $table-margin-bottom;
+    background-color: $table-bg; // Reset for nesting within parents with `background-color`.
 
     th,
     td {
@@ -21,7 +22,7 @@
     }
 
     .table {
-        background-color: $body-bg;
+        background-color: $table-bg;
     }
 }
 
@@ -83,10 +84,6 @@
 
 
 // Table backgrounds
-//
-// Exact selectors below required to override `.table-striped` and prevent
-// inheritance to nested tables.
-
 // Active variant
 @include table-row-variant(active, $table-bg-active, $table-bg-active-hover);
 
@@ -99,21 +96,18 @@
 }
 
 
-// Responsive tables
-//
-// Wrap tables in `.table-responsive` to enable horizontal scrolling.
-// Tables will scroll when they will no longer fit width-wise in
-// their container.
-.table-responsive {
+// Scrolling table
+// Add `.table-scroll` to table to enable horizontal scrolling.
+// Tables will scroll when they will no longer fit width-wise in their container.
+.table-scroll {
     display: block;
     width: 100%;
-    min-height: .01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
-    margin-bottom: $spacer;
     overflow-x: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 
-    // Tighten up spacing
-    > .table {
-        margin-bottom: 0;
+    // Prevent double border on horizontal scroll due to `display: block;`
+    &.table-bordered {
+        border: 0;
     }
 }
 
