--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -247,7 +247,7 @@ $cursor-disabled:                not-allowed !default;
 // Typography
 // =====
 // Font, line-height, and color for body text, headings, and more.
-$font-family-sans-serif:    -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-sans-serif:    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $font-family-serif:         Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:     Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:          $font-family-sans-serif !default;
