--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -401,13 +401,14 @@ h4 {
 .cf-feed {
     padding: 2rem 0;
     margin-top: 2rem;
+    margin-bottom: -2rem;
     background-color: #47a;
 }
 
 // Footer
 .cf-footer {
     padding: .75rem 0;
-    // margin-top: 2rem;
+    margin-top: 2rem;
     font-size: 85%;
     text-align: center;
     background-color: $uibase-50;
