--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -423,11 +423,13 @@ h4 > code {
 .cf-feed {
   padding: 2rem 0;
   margin-top: 2rem;
+  margin-bottom: -2rem;
   background-color: #47a;
 }
 
 .cf-footer {
   padding: .75rem 0;
+  margin-top: 2rem;
   font-size: 85%;
   text-align: center;
   background-color: #f0f0f0;
