Additional Scrollspy examples

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -291,11 +291,16 @@
 // Scrollspy
 .cf-example-scrollspy {
     position: relative;
-    height: 200px;
-    margin-top: 10px;
+    height: 12rem;
+    margin-top: .5rem;
     overflow: auto;
 }
-
+.cf-example-scrollspy2 {
+    position: relative;
+    height: 20rem;
+    margin-top: .5rem;
+    overflow: auto;
+}
 
 // Slider
 .cf-example > [data-cfw="slider"] .slider {
