--- a/scss/mixins/_cards.scss
+++ b/scss/mixins/_cards.scss
@@ -12,6 +12,12 @@
 @mixin card-outline-variant($color) {
     background-color: transparent;
     border-color: $color;
+
+    .card-header,
+    .card-footer {
+        background-color: transparent;
+        border-color: $color;
+    }
 }
 
 // Inverse text within a card for use with dark backgrounds
