Update to Normalize.css v6.0.0

--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -69,6 +69,8 @@ html {
 }
 
 body {
+    // Remove the margin in all browsers
+    margin: 0;
     // Make the `body` use the `font-size-root`
     font-family: $font-family-base;
     font-size: $font-size-base;
@@ -296,12 +298,6 @@ button,
 optgroup,
 select,
 textarea {
-    // Normalize v4.x used to include `font: inherit;`, but they now use some opinionated settings
-    // This reverts that for v5.0 so `font-family`. `font-size`, etc are inherited again
-    // Also undo the opinionated `line-height`
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
     // iOS adds rounded borders by default
     border-radius: 0;
 }
