--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -298,6 +298,9 @@ button,
 optgroup,
 select,
 textarea {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
     // iOS adds rounded borders by default
     border-radius: 0;
 }
